# SMTK

./: .clang-format  .clang-tidy  .editorconfig  .ghostflow.yml  .git-remote-files  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .hooks-config  .kitware-release.json  .readthedocs.yml  .travis.build.sh  .travis.yml  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  CTestConfig.cmake  CmbFaceMeshHelper.cxx  CmbFaceMeshHelper.h  CmbFaceMesherInterface.cxx  CmbFaceMesherInterface.h  CmbTriangleInterface.cxx  CmbTriangleInterface.h  DiscreteMesh.cxx  DiscreteMesh.h  DiscreteMeshCellIdIterator.h  DiscreteMeshClassification.h  LICENSE.txt  MeshClassification.h  ModelEdgeHelper.h  ModelVertexClassification.cxx  ModelVertexClassification.h  README.md  ReadMe.md  ReadMe.mkd  TriangleInterface.cxx  TriangleInterface.h  cdash-groups.json  module.cmake  (+132 more)
Testing/: CMakeLists.txt  MeshSpeedComparison.cxx  SimBuilderMeshEventsTest.cxx  SimBuilderMeshEventsTest2.cxx  SimBuilderMeshRelationTest.cxx
applications/ModelViewer/: CMakeLists.txt  ModelViewer.cxx  ModelViewer.h  ModelViewer.ui  main.cxx  model-viewer.cmake.in
applications/Nuclides/: CMakeLists.txt  main.cxx
applications/TemplateEditor/: AbstractDataModel.cxx  AbstractDataModel.h  AttDefDataModel.cxx  AttDefDataModel.h  AttDefDialog.cxx  AttDefDialog.h  AttDefInformation.cxx  AttDefInformation.h  AttDefTreeView.h  AttributeBrowser.cxx  AttributeBrowser.h  CMakeLists.txt  DataModelContainers.h  DataModelElement.h  HandlerGroup.cxx  HandlerGroup.h  HandlerItemDef.cxx  HandlerItemDef.h  HandlerValue.cxx  HandlerValue.h  HandlerVoid.cxx  HandlerVoid.h  InputDialog.cxx  InputDialog.h  ItemDefDataModel.cxx  ItemDefDataModel.h  ItemDefDialog.cxx  ItemDefDialog.h  ItemDefinitionsDataModel.h  PreviewPanel.cxx  PreviewPanel.h  TemplateEditorMain.cxx  TemplateEditorMain.h  main.cxx
attribute/: Attribute.cxx  Attribute.h  AttributeReader.cxx  AttributeReader.h  AttributeRefItem.cxx  AttributeRefItem.h  AttributeRefItemDefinition.cxx  AttributeRefItemDefinition.h  AttributeReferenceComponent.cxx  AttributeReferenceComponent.h  AttributeReferenceComponentDefinition.cxx  AttributeReferenceComponentDefinition.h  AttributeReferenceItem.cxx  AttributeReferenceItem.h  AttributeReferenceItemDefinition.cxx  AttributeReferenceItemDefinition.h  AttributeSection.cxx  AttributeSection.h  AttributeWriter.cxx  AttributeWriter.h  CMakeLists.txt  Cluster.cxx  Cluster.h  Component.cxx  Component.h  ComponentDefinition.cxx  ComponentDefinition.h  Definition.cxx  Definition.h  DirectoryItem.cxx  DirectoryItem.h  DirectoryItemDefinition.cxx  DirectoryItemDefinition.h  DoubleComponent.cxx  DoubleComponent.h  DoubleComponentDefinition.cxx  DoubleComponentDefinition.h  DoubleItem.cxx  DoubleItem.h  DoubleItemDefinition.cxx  (+75 more)
attribute/Qt/: CMakeLists.txt  qtAssociationWidget.cxx  qtAssociationWidget.h  qtAttribute.cxx  qtAttribute.h  qtAttributeRefItem.cxx  qtAttributeRefItem.h  qtAttributeSection.cxx  qtAttributeSection.h  qtComboItem.cxx  qtComboItem.h  qtExportADHDialog.ui  qtExportDialog.cxx  qtExportDialog.h  qtExportDialog.ui  qtFileItem.cxx  qtFileItem.h  qtGroupItem.cxx  qtGroupItem.h  qtGroupSection.cxx  qtGroupSection.h  qtInputsItem.cxx  qtInputsItem.h  qtInstancedSection.cxx  qtInstancedSection.h  qtItem.cxx  qtItem.h  qtModelEntitySection.cxx  qtModelEntitySection.h  qtReferencesWidget.cxx  qtReferencesWidget.h  qtRootItem.cxx  qtRootItem.h  qtRootSection.cxx  qtRootSection.h  qtSection.cxx  qtSection.h  qtSimpleExpressionSection.cxx  qtSimpleExpressionSection.h  qtTableWidget.cxx  (+3 more)
attribute/Testing/: CMakeLists.txt  attributeAutoNamingTest.cxx  attributeReferencingTest.cxx  basicAttributeDefinitionTest.cxx  basicAttributeDerivationTest.cxx  basicAttributeTest.cxx  basicAttributeXMLWriterTest.cxx  basicSectionWriterTest.cxx  catagoryTest.cxx  expressionTest.cxx  expressionTest2.cxx
attribute/model/: CMakeLists.txt  Item.cxx  Item.h  Model.h  ModelDomainItem.h  modelExport.h.in
doc/: CMakeLists.txt  cjson.doxyfile.in  conf.py  findfigure.py  index.rst  smtk.doxyfile.in  sparsehash.doxyfile.in  userguide-attribute.rst  userguide-contributing.rst  userguide-model.rst  userguide-overview.rst  userguide.css  userguide.rst
doc/.static/: theme-overrides.css
doc/dev/: README.md  build.md  develop.md  download.md  gitlab-ci.md  labels.md
doc/release/: index.rst  smtk-21.04.md  smtk-21.05.rst  smtk-21.07.rst  smtk-21.09.rst  smtk-21.10.rst  smtk-21.11.rst  smtk-21.12.rst  smtk-22.02.rst  smtk-22.04.rst  smtk-22.05.rst  smtk-22.07.rst  smtk-22.08.rst  smtk-22.11.rst  smtk-23.01.rst  smtk-23.04.rst  smtk-24.01.rst  smtk-24.11.rst  smtk-25.06.rst  smtk-3.0.md  smtk-3.1.md  smtk-3.2.md  smtk-3.3.md
doc/requirements/: dev.txt
doc/tutorials/: CMakeLists.txt  index.rst
doc/userguide/: administration.rst  contributing.rst  index.rst  model.rst  obtain-build-install.rst  overview.rst
itaps/imesh/: MBIter.hpp  Makefile.am  iMeshP.h
itaps/irel/: CMakeLists.txt  FBGeomAssocPairSide.cpp  GeomAssocPairSide.cpp  Lasso.cpp  MeshAssocPairSide.hpp  generate_irel_protos.cmake  iRel.h  iRel_f.h  iRel_protos.h  test_entset.cpp  test_entsetFB.cpp  test_status.cpp
model/: .#Entity.h  CMakeLists.txt  GroupItem.cxx  GroupItem.h  Model.cxx  Model.h  ModelDomainItem.cxx  ModelDomainItem.h  ModelItem.h
smtk/: AutoInit.h  CMakeLists.txt  Metaprogramming.h  PublicPointerDefs.h  PythonAutoInit.h  Regex.h  SharedFromThis.h  SharedPtr.h  SystemConfig.h  TupleTraits.h  doc.h  smtk.py  smtk_cgm.py  typesystem.xml  typesystem_cgm.xml  typesystem_remote.xml
smtk/Qt/: CMakeLists.txt  c.cxx  qtAssociationWidget.cxx  qtAssociationWidget.h  qtAttribute.cxx  qtAttribute.h  qtAttributeAssociation.ui  qtAttributeIcons.qrc  qtAttributePreview.cxx  qtAttributeRefItem.cxx  qtAttributeRefItem.h  qtAttributeSection.cxx  qtAttributeSection.h  qtAttributeView.cxx  qtAttributeView.h  qtBaseView.cxx  qtBaseView.h  qtColorButton.cxx  qtColorButton.h  qtColorItem.cxx  qtColorItem.h  qtComboItem.cxx  qtComboItem.h  qtDiscreteValueEditor.cxx  qtDiscreteValueEditor.h  qtDiscreteValueItem.cxx  (+59 more)
(+8710 files in other folders)
